--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 ---
-layout: home
+title: "Home Page"
+layout: splash
 author_profile: false
+header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
+  overlay_image: /assets/images/computer.jpg
+  actions:
+    - label: "Contact Me"
+      url: "mailto:adamreynolds89@gmail.com"
+  caption: "Photo credit: Malory Weber"
 ---
