--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ feature_row:
     url: "#test-link"
     btn_label: "Read More"
     btn_class: "btn--primary"
-  - image_path: assets/images/letters.jpg
+  - image_path: assets/images/boston-sky.png
     title: "Placeholder 3"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
 ---
