--- a/index.html
+++ b/index.html
@@ -9,26 +9,32 @@ header:
   actions:
     - label: "Contact Me"
       url: "mailto:adamreynolds89@gmail.com"
-  caption: "Photo credit: Malory Weber"
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
+  caption: "Photo credit: Biff"
+excerpt: ""
 intro: 
-  - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
+  - excerpt: '“I think of data science as more like a practice than a job. Think of the scientific method, where you have to have a problem statement, generate a hypothesis, collect data, analyze data and then communicate the results and take action…. If you just use the scientific method as a way to approach data-intensive projects, I think you’re more apt to be successful with your outcome.” - Bob Hayes'
 feature_row:
   - image_path: assets/images/letters.jpg
     alt: "placeholder image 1"
-    title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    title: "Text Analysis of Twitter During the Grammys"
+    excerpt: "The Grammys are a major event each year. Millions of people tune in to see who will win Artist of the Year."
+	url: "#test-link"
+	btn_label: "Read More"
+    btn_class: "btn--primary"
   - image_path: assets/images/wood-panel.jpg
     image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
     alt: "placeholder image 2"
-    title: "Placeholder 2"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    title: "Prediciting Crime Rates Using Classification Models in Weka"
+    excerpt: "Which factors are the biggest predictors of crime?"
     url: "#test-link"
     btn_label: "Read More"
     btn_class: "btn--primary"
   - image_path: assets/images/boston-full.jpg
-    title: "Placeholder 3"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    title: "Education Level vs Prestige"
+    excerpt: "Is prestige determined by education level?"
+	url: "#test-link"
+	btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
 
 {% include feature_row id="intro" type="center" %}
