--- a/index.html
+++ b/index.html
@@ -10,25 +10,31 @@ header:
     - label: "Contact Me"
       url: "mailto:adamreynolds89@gmail.com"
   caption: "Photo credit: Malory Weber"
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
+excerpt: "Welcome to my portfolio. Check out some of the projects I have been working on recently, and feel free to contact me if you have any questions."
 intro: 
   - excerpt: '“I think of data science as more like a practice than a job. Think of the scientific method, where you have to have a problem statement, generate a hypothesis, collect data, analyze data and then communicate the results and take action…. If you just use the scientific method as a way to approach data-intensive projects, I think you’re more apt to be successful with your outcome.” *-* *Bob Hayes*'
 feature_row:
   - image_path: assets/images/letters.jpg
     alt: "placeholder image 1"
-    title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    title: "Text Analysis"
+    excerpt: "In this analysis I analyze *text* data."
+	url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
   - image_path: assets/images/wood-panel.jpg
     image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
     alt: "placeholder image 2"
-    title: "Placeholder 2"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    title: "Logistic Regression"
+    excerpt: "This is the place where you click the link and read more."
     url: "#test-link"
     btn_label: "Read More"
     btn_class: "btn--primary"
   - image_path: assets/images/boston-full.jpg
-    title: "Placeholder 3"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    title: "Using Weka to predict crime in South Dakota"
+    excerpt: "Is **South Dakota** a real place? No one really knows for sure."
+	url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
 
 {% include feature_row id="intro" type="center" %}
