--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@ header:
   caption: "Photo credit: Malory Weber"
 excerpt: "Welcome to my portfolio. Check out some of the projects I have been working on recently, and feel free to contact me if you have any questions."
 intro: 
-  - excerpt: '“I think of data science as more like a practice than a job. Think of the scientific method, where you have to have a problem statement, generate a hypothesis, collect data, analyze data and then communicate the results and take action…. If you just use the scientific method as a way to approach data-intensive projects, I think you’re more apt to be successful with your outcome.” *-* *Bob Hayes*'
+  - excerpt: '“If you just use the scientific method as a way to approach data-intensive projects, I think you’re more apt to be successful with your outcome.” *-* *Bob Hayes*'
 feature_row:
   - image_path: assets/images/letters.jpg
     alt: "placeholder image 1"
     title: "Text Analysis"
     excerpt: "In this analysis I analyze *text* data."
-	url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
   - image_path: assets/images/wood-panel.jpg
     image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
     alt: "placeholder image 2"
@@ -32,9 +29,6 @@ feature_row:
   - image_path: assets/images/boston-full.jpg
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
-	url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
 ---
 
 {% include feature_row id="intro" type="center" %}
