--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ feature_row:
     alt: "placeholder image 1"
     title: "Text Analysis"
     excerpt: "In this analysis I analyze *text* data."
+	url: "https://reynolds-adam.github.io/about/"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
   - image_path: assets/images/wood-panel.jpg
     image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
     alt: "placeholder image 2"
