--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ feature_row:
     alt: "placeholder image 1"
     title: "Text Analysis"
     excerpt: "In this analysis I analyze *text* data."
-	url: "https://reynolds-adam.github.io/about/"
+	url: https://reynolds-adam.github.io/about/
     btn_label: "Read More"
     btn_class: "btn--primary"
   - image_path: assets/images/wood-panel.jpg
