--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ feature_row:
     alt: "placeholder image 2"
     title: "Logistic Regression"
     excerpt: "This is the place where you click the link and read more."
-    url: "#test-link"
+    url: "https://reynolds-adam.github.io/about/"
     btn_label: "Read More"
     btn_class: "btn--primary"
   - image_path: assets/images/boston-full.jpg
