--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ header:
   overlay_filter: "0.5"
   overlay_image: /assets/images/computer.jpg
   actions:
-    - label: "Contact Me"
-      url: "mailto:adamreynolds89@gmail.com"
-  caption: "Photo credit: Malory Weber"
+    - label: "Projects"
+      url: "https://reynolds-adam.github.io/projects/"
+  caption: ""
 excerpt: "Welcome to my portfolio. Check out some of the projects I have been working on recently, and feel free to contact me if you have any questions."
 intro: 
   - excerpt: '“If you just use the scientific method as a way to approach data-intensive projects, I think you’re more apt to be successful with your outcome.” *-* *Bob Hayes*'
