--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header:
     - label: "Projects"
       url: "https://reynolds-adam.github.io/projects/"
   caption: ""
-excerpt: "Welcome to my portfolio. Check out some of the projects I have been working on recently, and feel free to contact me if you have any questions."
+excerpt: "Welcome to my portfolio. Check out some of the projects I've been working on recently, and feel free to contact me if you have any questions."
 intro: 
   - excerpt: '“If you just use the scientific method as a way to approach data-intensive projects, I think you’re more apt to be successful with your outcome.” *-* *Bob Hayes*'
 feature_row:
@@ -33,10 +33,10 @@ feature_row:
 
 {% include feature_row id="intro" type="center" %}
 
-{% include feature_row %}
+#{% include feature_row %}
 
-{% include feature_row id="feature_row2" type="left" %}
+#{% include feature_row id="feature_row2" type="left" %}
 
-{% include feature_row id="feature_row3" type="right" %}
+#{% include feature_row id="feature_row3" type="right" %}
 
-{% include feature_row id="feature_row4" type="center" %}
+#{% include feature_row id="feature_row4" type="center" %}
