--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@ header:
       url: "https://reynolds-adam.github.io/projects/"
   caption: ""
 excerpt: "Welcome to my portfolio. Check out some of the projects I've been working on recently, and feel free to contact me if you have any questions."
+
 intro: 
   - excerpt: '“If you just use the scientific method as a way to approach data-intensive projects, I think you’re more apt to be successful with your outcome.” *-* *Bob Hayes*'
-feature_row:
+
+feature_row1:
   - image_path: assets/images/letters.jpg
     alt: "placeholder image 1"
     title: "Text Analysis"
@@ -33,10 +35,11 @@ feature_row:
 
 {% include feature_row id="intro" type="center" %}
 
-#{% include feature_row %}
+{% include feature_row id="feature" type ="center"  %}
 
-#{% include feature_row id="feature_row2" type="left" %}
+<!--{% include feature_row id="feature_row2" type="left" %}
 
 #{% include feature_row id="feature_row3" type="right" %}
 
 #{% include feature_row id="feature_row4" type="center" %}
+-->
