--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ feature_row1:
 
 {% include feature_row id="intro" type="center" %}
 
-{% include feature_row id="feature" type ="center"  %}
+{% include feature_row id="feature_row1" type ="center"  %}
 
 <!--{% include feature_row id="feature_row2" type="left" %}
 
