--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ feature_row1:
   - image_path: assets/images/boston-full.jpg
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
+	url: "https://reynolds-adam.github.io/projects/"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
 
 {% include feature_row id="intro" type="center" %}
