--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ feature_row1:
     alt: "placeholder image 1"
     title: "Text Analysis"
     excerpt: "In this analysis I analyze *text* data."
+feature_row2:
   - image_path: assets/images/wood-panel.jpg
     image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
     alt: "placeholder image 2"
@@ -28,21 +29,19 @@ feature_row1:
     url: "https://reynolds-adam.github.io/about/"
     btn_label: "Read More"
     btn_class: "btn--primary"
+feature_row3:
   - image_path: assets/images/boston-full.jpg
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
-	url: "https://reynolds-adam.github.io/projects/"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
 ---
 
 {% include feature_row id="intro" type="center" %}
 
-{% include feature_row id="feature_row1" type ="center" %}
+{% include feature_row %}
 
-<!--{% include feature_row id="feature_row2" type="left" %}
+{% include feature_row id="feature_row1" type="left" %}
 
-#{% include feature_row id="feature_row3" type="right" %}
+#{% include feature_row id="feature_row2" type="right" %}
 
-#{% include feature_row id="feature_row4" type="center" %}
--->
+#{% include feature_row id="feature_row3" type="center" %}
+
