--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ feature_row3:
 
 {% include feature_row id="feature_row1" type="left" %}
 
-#{% include feature_row id="feature_row2" type="right" %}
+#{% include feature_row id="feature_row2" type="left" %}
 
-#{% include feature_row id="feature_row3" type="center" %}
+#{% include feature_row id="feature_row3" type="left" %}
 
