--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ feature_row3:
   - image_path: assets/images/boston-full.jpg
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
+	btn_class: "btn--primary"
+	btn_label: "Read More"
 ---
 
 {% include feature_row id="intro" type="center" %}
@@ -41,7 +43,7 @@ feature_row3:
 
 {% include feature_row id="feature_row1" type="left" %}
 
-#{% include feature_row id="feature_row2" type="left" %}
+{% include feature_row id="feature_row2" type="left" %}
 
-#{% include feature_row id="feature_row3" type="left" %}
+{% include feature_row id="feature_row3" type="left" %}
 
