--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ feature_row3:
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
 	btn_class: "btn--primary"
-	btn_label: "Read More"
+	btn_label: "Read More1"
 ---
 
 {% include feature_row id="intro" type="center" %}
