--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@ feature_row2:
     alt: "placeholder image 2"
     title: "Logistic Regression"
     excerpt: "This is the place where you click the link and read more."
-    url: "https://reynolds-adam.github.io/about/"
+    url: "https://reynolds-adam.github.io/machine-learning/"
     btn_label: "Read More"
     btn_class: "btn--primary"
 feature_row3:
   - image_path: assets/images/boston-full.jpg
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
-	btn_class: "btn--primary"
-	btn_label: "Read More1"
+	url: "https://reynolds-adam.github.io/titanic/"
+
 ---
 
 {% include feature_row id="intro" type="center" %}
