--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ feature_row1:
     excerpt: "In this analysis I analyze *text* data."
 feature_row2:
   - image_path: assets/images/wood-panel.jpg
-    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
-    alt: "placeholder image 2"
+    <!--image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)" -->
+    alt: "placeholder image 1"
     title: "Logistic Regression"
     excerpt: "This is the place where you click the link and read more."
     url: "https://reynolds-adam.github.io/machine-learning/"
@@ -31,6 +31,7 @@ feature_row2:
     btn_class: "btn--primary"
 feature_row3:
   - image_path: assets/images/boston-full.jpg
+	alt: "placeholder image 1"
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
 	url: "https://reynolds-adam.github.io/titanic/"
