--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@ feature_row2:
     title: "Logistic Regression"
     excerpt: "This is the place where you click the link and read more."
     url: "https://reynolds-adam.github.io/machine-learning/"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
+    <!--btn_label: "Read More"
+    btn_class: "btn--primary"-->
 feature_row3:
   - image_path: assets/images/boston-full.jpg
 	alt: "placeholder image 1"
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
-	url: "https://reynolds-adam.github.io/titanic/"
+	<!--url: "https://reynolds-adam.github.io/titanic/"-->
 
 ---
 
