--- a/index.html
+++ b/index.html
@@ -22,20 +22,17 @@ feature_row1:
     excerpt: "In this analysis I analyze *text* data."
 feature_row2:
   - image_path: assets/images/wood-panel.jpg
-    <!--image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)" -->
-    alt: "placeholder image 1"
+    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
+    alt: "placeholder image 2"
     title: "Logistic Regression"
     excerpt: "This is the place where you click the link and read more."
-    url: "https://reynolds-adam.github.io/machine-learning/"
-    <!--btn_label: "Read More"
-    btn_class: "btn--primary"-->
+    url: "https://reynolds-adam.github.io/about/"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 feature_row3:
   - image_path: assets/images/boston-full.jpg
-	alt: "placeholder image 1"
     title: "Using Weka to predict crime in South Dakota"
     excerpt: "Is **South Dakota** a real place? No one really knows for sure."
-	<!--url: "https://reynolds-adam.github.io/titanic/"-->
-
 ---
 
 {% include feature_row id="intro" type="center" %}
@@ -44,7 +41,7 @@ feature_row3:
 
 {% include feature_row id="feature_row1" type="left" %}
 
-{% include feature_row id="feature_row2" type="left" %}
+#{% include feature_row id="feature_row2" type="left" %}
 
-{% include feature_row id="feature_row3" type="left" %}
+#{% include feature_row id="feature_row3" type="left" %}
 
