--- a/_notes/index.html
+++ b/_notes/index.html
@@ -1,5 +1,11 @@
 ---
-layout: home
+layout: archive
 permalink: /notes/
 
 ---
+
+{% for item in site.notes %}
+  <h2>{{ item.title }}</h2>
+  <p>{{ item.description }}</p>
+  <p><a href="{{ item.url }}">{{ item.title }}</a></p>
+{% endfor %}
